<resources>
    <string name="app_name">AndroidUltrasSat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_screen">Login Screen</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_simple_maps">SimpleMapsActivity</string>
    <string name="title_activity_address_maps">AddressMapsActivity</string>
</resources>