<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/login_screen"
        android:gravity="center"
        android:textSize="@dimen/_33ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:padding="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_round_email_24"
        android:drawablePadding="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_round_lock_24"
        android:drawablePadding="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textSize="@dimen/_12ssp"
            android:layout_weight="1"
            android:layout_margin="@dimen/_5sdp"
            android:onClick="login"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <Button
            android:textSize="@dimen/_12ssp"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_margin="@dimen/_5sdp"
            android:layout_gravity="center"
            android:text="@string/register"
            android:onClick="register"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>